--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Github Action for LaTeX
-      - uses: xu-cheng/latex-action@v2
+        uses: xu-cheng/latex-action@v2
 
