--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -30,4 +30,9 @@ jobs:
         with:
           root_file:
             CV_Ekaterina_Ilin.tex
-
+      
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.0
+        with:
+          name: PDF
+          path: main.pdf
