--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: PDF
-          path: main.pdf
+          path: CV_Ekaterina_Ilin.pdf
